[gd_scene load_steps=15 format=3 uid="uid://c31twgojuxm01"]

[ext_resource type="PackedScene" uid="uid://dsbfsi27pov27" path="res://Scenes/Player.tscn" id="1_ejd2g"]
[ext_resource type="Script" uid="uid://deids1dsmsswn" path="res://Scripts/CameraZones/CameraZoneManager.gd" id="1_gsptc"]
[ext_resource type="Script" uid="uid://bxf3u0i6yak2w" path="res://Scripts/CameraZones/CameraZone.gd" id="2_xcwyu"]
[ext_resource type="PackedScene" uid="uid://djnoxmx6xxov2" path="res://Scenes/UI/DebugUI.tscn" id="3_gsptc"]
[ext_resource type="Script" uid="uid://d37kmj8l1aw1i" path="res://Scripts/CameraZones/CameraMovement.gd" id="3_jrjdp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_xcwyu"]
size = Vector3(30.732788, 13.525391, 10)

[sub_resource type="Curve3D" id="Curve3D_jrjdp"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 14.283482, 3.983222, 3.6309385, 0, 0, 0, 0, 0, 0, -11.330223, 4.5757656, 3.0842402),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_5cjrv"]
size = Vector3(40, 1, 40)

[sub_resource type="BoxMesh" id="BoxMesh_j0p05"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vygsr"]
albedo_color = Color(0.30576488, 0.31537718, 0.2421104, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_04xr5"]
size = Vector3(200, 1, 200)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_04xr5"]
albedo_color = Color(0.25589287, 0.21072027, 0.16382411, 1)

[sub_resource type="BoxMesh" id="BoxMesh_r15hr"]
size = Vector3(10, 1, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_vygsr"]
size = Vector3(10, 1, 10)

[node name="DebugWorld" type="Node3D"]

[node name="CameraZoneManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_gsptc")

[node name="CameraZone" type="Area3D" parent="CameraZoneManager"]
script = ExtResource("2_xcwyu")
metadata/_custom_type_script = "uid://bxf3u0i6yak2w"

[node name="ZoneCollision" type="CollisionShape3D" parent="CameraZoneManager/CameraZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -32.755707, -0.18945313, 0)
shape = SubResource("BoxShape3D_xcwyu")
debug_color = Color(0, 0.6, 0.69803923, 1)

[node name="CameraPath" type="Path3D" parent="CameraZoneManager/CameraZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34.595676, 0, 0)
curve = SubResource("Curve3D_jrjdp")

[node name="LockedCamera" type="Camera3D" parent="CameraZoneManager/CameraZone/CameraPath"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.4775705, 0)
script = ExtResource("3_jrjdp")

[node name="CameraZone2" type="Area3D" parent="CameraZoneManager"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -51.898605, 0, 22.435238)
script = ExtResource("2_xcwyu")
metadata/_custom_type_script = "uid://bxf3u0i6yak2w"

[node name="ZoneCollision" type="CollisionShape3D" parent="CameraZoneManager/CameraZone2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -32.755707, -0.18945313, 0)
shape = SubResource("BoxShape3D_xcwyu")
debug_color = Color(0, 0.6, 0.69803923, 1)

[node name="CameraPath" type="Path3D" parent="CameraZoneManager/CameraZone2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34.595676, 0, 0)
curve = SubResource("Curve3D_jrjdp")

[node name="LockedCamera" type="Camera3D" parent="CameraZoneManager/CameraZone2/CameraPath"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.4775705, 0)
script = ExtResource("3_jrjdp")

[node name="Environment" type="Node" parent="."]

[node name="Ground" type="StaticBody3D" parent="Environment"]

[node name="GroundCollider" type="CollisionShape3D" parent="Environment/Ground"]
shape = SubResource("BoxShape3D_5cjrv")

[node name="GroundMesh" type="MeshInstance3D" parent="Environment/Ground"]
transform = Transform3D(39.999397, -0.0050414056, 0.081999965, 0.2013981, 0.9999823, 0.12580766, -0.082631774, -0.0031348395, 39.999714, 0, 0, 0)
mesh = SubResource("BoxMesh_j0p05")
surface_material_override/0 = SubResource("StandardMaterial3D_vygsr")

[node name="Ground2" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6.265029, 0)

[node name="GroundCollider" type="CollisionShape3D" parent="Environment/Ground2"]
shape = SubResource("BoxShape3D_04xr5")

[node name="GroundMesh" type="MeshInstance3D" parent="Environment/Ground2"]
transform = Transform3D(200, 0, 0, 0, 1, 0, 0, 0, 200, 0, 0, 0)
mesh = SubResource("BoxMesh_j0p05")
surface_material_override/0 = SubResource("StandardMaterial3D_04xr5")

[node name="Block" type="StaticBody3D" parent="Environment"]
transform = Transform3D(0.029282393, 0, 0.9995712, 0, 1, 0, -0.9995712, 0, 0.029282393, -25.029364, -3.1003819, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Block"]
transform = Transform3D(1, 0, 0, 0, 0.75933945, 0.6506947, 0, -0.6506947, 0.75933945, 9.313226e-10, 0.19678831, 0.40889496)
mesh = SubResource("BoxMesh_r15hr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Block"]
transform = Transform3D(1, 0, 0, 0, 0.77938175, 0.6265494, 0, -0.6265494, 0.77938175, -4.656613e-10, 0.1933315, 0.24049027)
shape = SubResource("BoxShape3D_vygsr")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.5394667, 0.56575876, -0.6236126, 0.7562875, 7.801726e-09, 0.65423936, 0.37014166, -0.8245708, -0.4278763, -10.312971, 13.88743, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_ejd2g")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6880639, 0)

[node name="DebugUI" parent="." instance=ExtResource("3_gsptc")]
